Update Install.sh